<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi_calculadora"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="left"
        android:background="#413CCC"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:gravity="left"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/calculadora"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_calculadora"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="16dp"
        android:text="@string/introduzca_el_primer_numero"
        android:textColor="@color/black"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:hint="Numero 1"
        android:minHeight="48dp"
        tools:text="Numero 1"
        android:id="@+id/num_uno"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="16dp"
        android:text="@string/introduzca_el_segundo_numero"
        android:textColor="@color/black"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:hint="Numero 2"
        android:minHeight="48dp"
        tools:text="Numero 2"
        android:id="@+id/num_dos"
        android:inputType="number"/>


<LinearLayout
android:id = "@+id/button_linearlayout"
android:layout_width="wrap_content"
android:layout_height="49dp"
android:orientation="horizontal"
android:layout_gravity="center"
android:gravity="center"
    tools:ignore="ExtraText">


    <Button
        android:id="@+id/Sumar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/sumar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_margin="3dp"/>

    <Button
        android:id="@+id/Restar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/restar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Mult"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/mult"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Dividir"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/dividir"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />



</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        tools:ignore="TextSizeCheck"
        android:id="@+id/Resultado_id"
        tools:Text="@string/resultado" />



    </LinearLayout>